Fix spacing and line-height issues

--- a/src/styles/modules/_board.scss
+++ b/src/styles/modules/_board.scss
@@ -5,3 +5,8 @@
   position: relative;
   overflow: hidden;
 }
+
+.box {
+  text-align: center;
+  line-height: 2;
+}
